# kaleido

./: .gitignore  Cargo.toml  build.rs
src/: ast.md  codegen.md  inputs.md  lexer.md  lib.md  parser.md
src/llvm/: execution_engine.md  mod.md  pass_manager.md
